# AgenticPoker

./: .gitignore  Dockerfile  GIT_SETUP.md  Makefile  README.md  cli.py  code-generation-preferences.md  convo-001.md  how-to-run-this-app.md  implementation_plan.md  pyproject.toml  requirements.txt  task.md  test_training_quick.py  verify_game.py
.github/workflows/: ci.yml
agents/: dialogue_manager.py  functional_agent.py  llm_agent.py
analysis/: stats_analyzer.py
config/: training_config.yaml  tune_ai_players.yml
docs/: architecture.rst  bdd_testing.rst  conf.py  contributing.rst  dev-bdd-guide.md  index.rst
docs/api/: index.rst
engine/: domain.py  functional_utils.py  game_theory.py  hand_evaluator.py  logic.py  mcp.py  probability.py
learn-poker/: some-more-understanding.txt  understanding.md
tests/: agent_runner.py  test_game_theory.py  test_hand_evaluator.py  test_model.py  test_probability.py  test_simulator.py  test_training.py
tests/bdd/features/: advanced_scenarios.feature  poker_rules.feature
tests/bdd/steps/: poker_steps.py
todo-for-user/: todo.txt
training/: README.md  __init__.py  data_collector.py  evaluator.py  game_simulator.py  metrics.py  train.py  trainer.py  training_config.py
training/model/: __init__.py  model.py  tokenizer.py
ui/: app.py  fastapi_app.py
ui/poker_component/: index.html  package-lock.json  package.json
ui/poker_component/src/: App.tsx  index.css
ui/poker_component/src/components/: InfoPanel.tsx  Player.tsx  Table.tsx
ui/static/: app.js  styles.css
ui/templates/: poker_table.html
